--- a/references.bib
+++ b/references.bib
@@ -347,6 +347,24 @@
   file = {/Users/jinko/Zotero/storage/IWWLJ9RN/Davis - 2020 - For the Greater (Bacterial) Good Heterogeneous Expression of Energetically Costly Virulence Factors.pdf}
 }
 
+@article{dekkersShamNeurosurgeryPatients2001,
+  title = {Sham Neurosurgery in Patients with {{Parkinson}}'s Disease: Is It Morally Acceptable?},
+  shorttitle = {Sham Neurosurgery in Patients with {{Parkinson}}'s Disease},
+  author = {Dekkers, Wim and Boer, Gerard},
+  year = 2001,
+  month = jun,
+  journal = {Journal of Medical Ethics},
+  volume = {27},
+  number = {3},
+  pages = {151--156},
+  issn = {0306-6800, 1473-4257},
+  doi = {10.1136/jme.27.3.151},
+  urldate = {2026-02-15},
+  abstract = {For a few decades, patients with Parkinson's disease (PD) have been treated with intracerebral transplantations of fetal mesencephalic tissue. The results of open trials have been variable. Double blind, placebo-controlled studies have recently been started in order to further investigate the efficacy of this new medical technique. In this paper we challenge the need for sham surgery in neurotransplantation research on PD patients. Considerations regarding the research subjects' informed consent, therapeutic misconception, the integrity of the human body, and the assessment of risks and benefits argue against sham surgery for patients with PD. Moreover, there is an alternative, less harmful mode of research that can provide the same or comparable scientific evidence. A plea is made for intrapatient research based on quantitative measurements of the patient's pre- and post-operative condition combined with similar research on a reference group of patients who have received the standard treatment.},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/S7HIZ3EC/Dekkers and Boer - 2001 - Sham neurosurgery in patients with Parkinson's disease is it morally acceptable.pdf}
+}
+
 @article{dyckLecanemabEarlyAlzheimers2023,
   title = {Lecanemab in {{Early Alzheimer}}'s {{Disease}}},
   author = {van Dyck, Christopher H. and Swanson, Chad J. and Aisen, Paul and Bateman, Randall J. and Chen, Christopher and Gee, Michelle and Kanekiyo, Michio and Li, David and Reyderman, Larisa and Cohen, Sharon and Froelich, Lutz and Katayama, Sadao and Sabbagh, Marwan and Vellas, Bruno and Watson, David and Dhadda, Shobha and Irizarry, Michael and Kramer, Lynn D. and Iwatsubo, Takeshi},
@@ -1167,6 +1185,13 @@
   file = {/Users/jinko/Zotero/storage/5CGSVDT3/Lundstedt et al. - 2021 - Assembly and maintenance of lipids at the bacteria.pdf}
 }
 
+@article{mackenzieEthicsCasesSurgery,
+  title = {Ethics {{Cases}}: {{Surgery}} for {{Placebo Effect}}?},
+  author = {MacKenzie, Commentary C Ronald and Matava, Matthew J and Iv, Charles Carroll},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/RKXZHRH2/MacKenzie et al. - Ethics Cases Surgery for Placebo Effect.pdf}
+}
+
 @article{magasanikGlobalRegulationGene2000,
   title = {Global Regulation of Gene Expression},
   author = {Magasanik, Boris},
@@ -1296,6 +1321,23 @@
   urldate = {2026-02-03},
   langid = {english},
   file = {/Users/jinko/Zotero/storage/JWR5PGVK/Miller-Ihli - 1988 - Trace-element determinations in biologicals using atomic-absorption spectrometry.pdf}
+}
+
+@article{millerEthicsShamInvasive2009,
+  title = {The Ethics of Sham Invasive Intervention Trials},
+  author = {Miller, Franklin G and Wendler, David},
+  year = 2009,
+  month = oct,
+  journal = {Clinical Trials},
+  volume = {6},
+  number = {5},
+  pages = {401--402},
+  issn = {1740-7745, 1740-7753},
+  doi = {10.1177/1740774509344146},
+  urldate = {2026-02-15},
+  copyright = {https://journals.sagepub.com/page/policies/text-and-data-mining-license},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/ZZPXE7TM/Miller and Wendler - 2009 - The ethics of sham invasive intervention trials.pdf}
 }
 
 @article{millerShamProceduresEthics2004,
