--- a/blog/08-29-25.qmd
+++ b/blog/08-29-25.qmd
@@ -5,7 +5,7 @@ categories:
     - "Biology"
 ---
 
-I was reading _An Introduction to Genetic Engineering—4th_ by Nicholl and wanted to write about the applications of the Klenow fragment but instead got distracted by a different subject altogether.
+Sequencing is cool. I wanted to write about it.
 
 ## 1st Gen Sequencing
 Dideoxy gene sequencing uses what is called "primed synthesis" for sequencing. Primed synthesis works as follows: primers anneal onto a denatured strand of DNA, yielding ssDNA and creating a free 3'-OH group. A DNA polymerase then binds to the oligonucleotide primer, copying the remainder of the template strand. Understanding this mechanism is important for understanding the later stages of sequencing.
